# ResumeGenie

./: .gitignore  QUICKSTART.md  README.md  docker-compose.yml  package-lock.json  package.json
backend/: .dockerignore  Dockerfile  Makefile  Makefile.bat  README_ENV.md  env.txt  pyproject.toml  pytest.ini  requirements.txt  run.bat  test_mongodb_connection.py
backend/app/: __init__.py  config.py  db.py  gemini_client.py  main.py  rate_limiter.py  schemas.py  utils.py  utils_ats.py  utils_parse.py
backend/app/routers/: ats.py  interview.py  resumes.py  suggest.py
backend/tests/: __init__.py  test_health.py  test_schemas.py
docker/: README.md
docs/: Deployment.md  How to run.md  MongoDB_Atlas_Setup.md
frontend/: README.md  index.html  package-lock.json  package.json  run.bat  tailwind.config.js  tsconfig.json
frontend/frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ATSPanel.tsx  ExportButton.tsx  ExportDialog.tsx  Navbar.tsx  StepHeader.tsx  Stepper.tsx  SuggestModal.tsx  TemplatePicker.tsx
frontend/src/components/Preview/: ClassicA.tsx  ModernB.tsx  TemplateFrame.tsx
frontend/src/components/forms/: Education.tsx  (+7 more)
frontend/src/contexts/: ThemeContext.tsx
frontend/src/hooks/: useAutoSave.ts  useExport.ts
frontend/src/lib/: ats.ts
frontend/src/pages/: ATSChecker.tsx  Builder.tsx  CoverLetter.tsx  Home.tsx  InterviewQuestions.tsx  Landing.tsx  ResumeRoaster.tsx
frontend/src/schemas/: resume.ts
frontend/src/store/: useResumeStore.ts
frontend/src/test/: resume.test.ts  setup.ts
