[project]
name = "resumegenie-backend"
version = "0.1.0"
description = "FastAPI backend for ResumeGenie"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "ruff~=0.7",
    "pytest~=8.3",
]

[tool.uvicorn]
app = "app.main:app"
host = "0.0.0.0"
port = 8000
reload = true

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

